fixed some spacing

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -89,7 +89,7 @@ div.card.weather-card {
   width: 100%;
   max-width: 100%;
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
+  grid-row-gap: 0.8em;
   grid-template-areas: "header" "temp" "humid" "wind" "uv";
 }
 
